For ecotaxa/ecotaxa_dev#435: Partial API-fication of classification page query.
